[package]
name = "doug"
description = "A time tracking command-line utility"
repository = "https://github.com/chdsbd/doug"
documentation = "https://github.com/chdsbd/doug/blob/master/README.md"
readme="README.md"
license = "MIT"
version = "1.5.1"
authors = ["Christopher Dignam <chris@dignam.xyz>"]

[dependencies]
atty = "0.2.3"
clap = "2.29.2"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.4"
colored = "1.5"
