[package]
name = "doug"
description = "A time tracking command-line utility"
repository = "https://github.com/chdsbd/doug"
documentation = "https://github.com/chdsbd/doug/blob/master/README.md"
readme="README.md"
license = "MIT"
version = "1.10.0"
authors = ["Christopher Dignam <chris@dignam.xyz>", "Steve Dignam <steve@dignam.xyz>"]
edition = "2018"

[dependencies]
atty = "0.2.3"
clap = "2.29.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.15", features = ["derive"] }
serde_json = "1.0.4"
colored = "1.5"
chrono-english = "0.1.3"

[dev-dependencies]
tempfile = "3.0.4"
